[metadata]
name                              = openschc
version                           = attr: openschc.VERSION.VERSION
author                            = Thomas Watteyne
author_email                      = twatteyne@gmail.com
description                       = open-source implementation of SCHC (Static Context Header Compression)
long_description                  = file: README.rst
long_description_content_type     = text/markdown
url                               = https://github.com/openschc/openschc
project_urls                      =
    Source Code                   = https://github.com/openschc/openschc
    Bug Tracker                   = https://github.com/openschc/openschc/issues
classifiers                       =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages                          = openschc
install_requires                  =
    kamene

[options.package_data]
scumprogrammer                    = views/*.tpl, static/*

[options.entry_points]
console_scripts                   =
    scumprogrammer                = openschc:main_app